Working on Skill page with delete.

--- a/src/WASM/Pages/Admin/Skill/Edit.razor
+++ b/src/WASM/Pages/Admin/Skill/Edit.razor
@@ -20,7 +20,7 @@
                 </MudNumericField>
                 <MudItem Class="d-flex justify-end mt-5">
                     <MudButton ButtonType="ButtonType.Submit" Variant="Variant.Filled" Color="Color.Secondary" StartIcon="@Icons.Filled.Save" Class="mr-5">Save</MudButton>
-                    <MudButton ButtonType="ButtonType.Submit" Variant="Variant.Filled" Color="Color.Primary" StartIcon="@Icons.Filled.ArrowBack" OnClick="BackToList">Back</MudButton>
+                    <MudButton Variant="Variant.Filled" Color="Color.Primary" StartIcon="@Icons.Filled.ArrowBack" OnClick="BackToList">Back</MudButton>
                 </MudItem>
             </EditForm>
         </MudPaper>
