--- a/src/WASM/Shared/MainLayout.razor
+++ b/src/WASM/Shared/MainLayout.razor
@@ -1,7 +1,12 @@
 ﻿@inherits LayoutComponentBase
 
 <MudThemeProvider />
-<MudDialogProvider />
+<MudDialogProvider 
+    DisableBackdropClick="true"
+    CloseOnEscapeKey="true"
+    MaxWidth="MaxWidth.ExtraSmall"
+    Position="DialogPosition.Center"
+/>
 <MudSnackbarProvider />
 
 <MudLayout>
