Done Upload page.

--- a/src/WASM/Pages/Admin/Image/Index.razor
+++ b/src/WASM/Pages/Admin/Image/Index.razor
@@ -8,46 +8,34 @@
 <Breadcrumbs />
 
 <MudGrid>
-    <MudItem xs="12" Class="mt-5">
-        <MudGrid>
-            <MudItem md="3" sm="6" xs="12" Class="mt-5">
-                <MudPaper Elevation="5">
-                    <MudGrid>
-                        <MudItem xs="12" Class="d-flex justify-center">
-                            <MudImage Fluid="true" ObjectFit="ObjectFit.Cover" Src="@imageDataUrl" />
-                        </MudItem>
-                        <MudItem xs="12" Class="d-flex justify-center">
+    <MudItem md="3" sm="6" xs="12" Class="d-flex justify-center">
+        <MudImage Elevation="5" Fluid="true" ObjectFit="ObjectFit.Cover" Src="@imageDataUrl" Style="height:100%" />
+    </MudItem>
+    <MudItem md="9" sm="6" xs="12">
+        <MudPaper Elevation="5" Class="my-3">
+            <MudGrid>
+                <MudItem xs="12">
+                    <MudText Typo="Typo.h5" Class="ml-5"><span class="mud-primary-text"><strong>Upload New Image</strong></span></MudText>
+                </MudItem>
+                <MudItem xs="12">
+                    <EditForm Class="mx-5" Model="Image" OnValidSubmit="HandleSubmit">
+                        <DataAnnotationsValidator />
+                        <MudTextField Class="mb-5" @bind-Value="@Image.OldImagePath" For="@(() => Image.OldImagePath)" Variant="Variant.Outlined" Label="Image Tooltip">
+                        </MudTextField>
+                        <MudSelect Class="mb-5" @bind-Value="@Image.OldImagePath" T="string" Label="Image For" Variant="Variant.Outlined" AnchorOrigin="Origin.BottomCenter">
+                            <MudSelectItem T="string" Value="@("avatars")" />
+                            <MudSelectItem T="string" Value="@("services")" />
+                            <MudSelectItem T="string" Value="@("posts")" />
+                        </MudSelect>
+                        <MudItem Class="d-flex justify-end">
                             <InputFile id="fileInput" hidden multiple OnChange="OnFileChange" />
-                            <MudFab Color="Color.Secondary" StartIcon="@Icons.Filled.PhotoCamera" HtmlTag="label" for="fileInput" Class="mx-1" />
-                            <MudFab Color="Color.Primary" StartIcon="@Icons.Filled.Edit" Class="mx-1" />
+                            <MudButton HtmlTag="label" for="fileInput" Variant="Variant.Filled" Color="Color.Primary" StartIcon="@Icons.Filled.PhotoCamera" Class="mr-5">Browse</MudButton>
+                            <MudButton ButtonType="ButtonType.Submit" Variant="Variant.Filled" Color="Color.Secondary" StartIcon="@Icons.Filled.CloudUpload">Upload</MudButton>
                         </MudItem>
-                    </MudGrid>
-                </MudPaper>
-            </MudItem>
-            <MudItem md="9" sm="6" xs="12" Class="mt-5">
-                <MudPaper Elevation="5">
-                    <MudGrid>
-                        <MudItem xs="12">
-                            <MudText Typo="Typo.h5" Class="ml-5"><span class="mud-primary-text"><strong>Upload New Image</strong></span></MudText>
-                        </MudItem>
-                        <MudItem xs="12">
-                            <EditForm Class="mx-5" Model="Image" OnValidSubmit="HandleSubmit">
-                                <MudTextField Class="mb-3" @bind-Value="@Image.RelativeImagePath" Variant="Variant.Outlined" Label="Image Tooltip">
-                                </MudTextField>
-                                <MudSelect @bind-Value="@Image.OldImagePath" T="string" Label="Image For" Variant="Variant.Outlined" AnchorOrigin="Origin.BottomCenter">
-                                    <MudSelectItem T="string" Value="@("avatars")" />
-                                    <MudSelectItem T="string" Value="@("services")" />
-                                    <MudSelectItem T="string" Value="@("posts")" />
-                                </MudSelect>
-                            </EditForm>
-                        </MudItem>
-                        <MudItem xs="12" Class="d-flex justify-end">
-                            <MudButton ButtonType="ButtonType.Submit" Variant="Variant.Filled" Color="Color.Secondary" StartIcon="@Icons.Filled.Save" Class="mt-n5">Save</MudButton>
-                        </MudItem>
-                    </MudGrid>
-                </MudPaper>
-            </MudItem>
-        </MudGrid>
+                    </EditForm>
+                </MudItem>
+            </MudGrid>
+        </MudPaper>
     </MudItem>
     <MudItem xs="12" Class="mt-5">
         <MudTable Elevation="5" Items="@Images" Hover="true">
@@ -58,11 +46,7 @@
             <HeaderContent>
                 <MudTh Class="text-center">Image</MudTh>
                 <MudTh Class="text-center">Relative Path</MudTh>
-                <MudTh>
-                    <MudItem Class="d-flex justify-end">
-                        <MudFab Color="Color.Secondary" StartIcon="@Icons.Filled.Add" Size="Size.Medium" Class="mx-3" Link="/admin/images/edit" />
-                    </MudItem>
-                </MudTh>
+                <MudTh></MudTh>
             </HeaderContent>
             <RowTemplate>
                 <MudTd Class="text-center" DataLabel="Image">
@@ -85,14 +69,13 @@
 @code
 {
     private IEnumerable<ImageDto> Images = new List<ImageDto>();
-
     private ImageDto Image = new ImageDto();
+    private IBrowserFile imageUpload;
 
-    private string searchString = "";
     private bool _attemptUpload = false;
     private bool _attemptUploadFailed = false;
-    private string _reasonUploadFailed = string.Empty;
-    private string imageDataUrl = "";
+    private string imageDataUrl = "./asset/img/placeholder.png";
+    private string searchString = "";
 
     protected override async Task OnInitializedAsync()
     {
@@ -101,9 +84,9 @@
 
     private async Task OnFileChange(InputFileChangeEventArgs e)
     {
-        var imageFile = e.File;
+        imageUpload = e.File;
         var format = "img/png";
-        var resizedImageFile = await imageFile.RequestImageFileAsync(format, 200, 200);
+        var resizedImageFile = await imageUpload.RequestImageFileAsync(format, 300, 300);
         var buffer = new byte[resizedImageFile.Size];
         await resizedImageFile.OpenReadStream().ReadAsync(buffer);
         imageDataUrl = $"data:{format};base64,{Convert.ToBase64String(buffer)}";
@@ -111,57 +94,51 @@
 
     private async Task HandleSubmit()
     {
-        //if (Id == 0)
-        //    submitResult = await ServiceRepo.CreateAsync(ApiEndPoints.ServiceEndpoint, Service);
-        //else
-        //    submitResult = await ServiceRepo.UpdateAsync(ApiEndPoints.ServiceEndpoint, Service);
-
-        //if (submitResult)
-        //    Snackbar.Add("Operation Success", Severity.Success);
-        //else
-        //    Snackbar.Add("Operation Error", Severity.Error);
+        await HandleUploadImage();
     }
 
-    private async Task HandleUploadImage(InputFileChangeEventArgs e)
+    private async Task HandleUploadImage()
     {
         _attemptUpload = true;
 
-        if (e.File.ContentType != "image/jpeg" && e.File.ContentType != "image/png")
+        if (imageUpload.ContentType != "image/jpeg" && imageUpload.ContentType != "image/png")
         {
-            _reasonUploadFailed = "Invalid image type.";
+            Snackbar.Add("Invalid image type.", Severity.Warning);
             _attemptUploadFailed = true;
         }
-        else if (e.File.Size >= 31000000) // ~30 megabytes
+        else if (imageUpload.Size >= 31000000) // ~30 megabytes
         {
-            _reasonUploadFailed = "Image must not larger than 30MB.";
+            Snackbar.Add("Image must not larger than 30MB.", Severity.Warning);
             _attemptUploadFailed = true;
         }
         else
         {
-            IBrowserFile uploadedFile = e.File;
-            byte[] fileAsByte = new byte[uploadedFile.Size];
+            byte[] fileAsByte = new byte[imageUpload.Size];
 
             // Fills the content of the image byte array
-            await uploadedFile.OpenReadStream(31000000).ReadAsync(fileAsByte);
+            await imageUpload.OpenReadStream(31000000).ReadAsync(fileAsByte);
             string byteString = Convert.ToBase64String(fileAsByte);
 
-            ImageDto avatarUploaded = new ImageDto()
-                {
-                    NewImageExtension = uploadedFile.Name.Substring(uploadedFile.Name.Length - 4),
-                    NewImageBase64Content = byteString,
-                    OldImagePath = string.Empty
-                };
+            Image.NewImageExtension = imageUpload.Name.Substring(imageUpload.Name.Length - 4);
+            Image.NewImageBase64Content = byteString;
 
-            var relativeImagePath = await ImageRepo.SaveImageAsync(ApiEndPoints.ImageEndpoint, avatarUploaded);
+            var relativeImagePath = await ImageRepo.SaveImageAsync(ApiEndPoints.ImageEndpoint, Image);
 
             if (String.IsNullOrWhiteSpace(relativeImagePath))
             {
-                _reasonUploadFailed = $"Error upload image!";
+                Snackbar.Add("Error upload image!", Severity.Error);
                 _attemptUploadFailed = true;
             }
         }
+
+        if (!_attemptUploadFailed)
+        {
+            Snackbar.Add("Upload image success!", Severity.Success);
+            StateHasChanged();
+            NavManager.NavigateTo("/admin/images", true);
+        }
+
         _attemptUpload = false;
-        StateHasChanged();
     }
 
     private async void DeleteImage(int id)
