--- a/src/WASM/_Imports.razor
+++ b/src/WASM/_Imports.razor
@@ -8,6 +8,7 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using MudBlazor
+@using Blazored.TextEditor
 @using WASM
 @using WASM.Components.Public
 @using WASM.Components.Admin
